# BoxPilot

./: .gitignore  CONTEXT.md  Cargo.toml  LICENSE  README.md  app.rc  build.rs
.github/workflows/: release.yml
docs/agents/: domain.md
src/: actions.rs  lib.rs  main.rs
src/core/: bytefmt.rs  clash_api.rs  deeplink.rs  mod.rs  orchestration.rs  paths.rs  presentation.rs  process.rs  profile_draft.rs  settings.rs  single_instance.rs  subscription.rs  timefmt.rs
src/state/: app_state.rs  log_buffer.rs  mod.rs  process_session.rs  proxy_groups.rs  traffic.rs
src/ui/: assets.rs  mod.rs  root.rs  sidebar.rs  toast.rs  widgets.rs
src/ui/pages/: groups.rs  home.rs  logs.rs  mod.rs  profiles.rs  settings.rs
tests/: import_rollback.rs
wix/: License.rtf  main.wxs
